--- a/package.yaml
+++ b/package.yaml
@@ -112,6 +112,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - aoc2018
+    - containers
   day10:
     main:                Main.hs
     source-dirs:         day10
