--- a/package.yaml
+++ b/package.yaml
@@ -53,7 +53,6 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - aoc2018
-    - split
   day04:
     main:                Main.hs
     source-dirs:         day04
@@ -122,6 +121,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - aoc2018
+    - text
   day11:
     main:                Main.hs
     source-dirs:         day11
