day13 - not working for some bloody reason

--- a/package.yaml
+++ b/package.yaml
@@ -150,6 +150,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - aoc2018
+    - matrix
   day14:
     main:                Main.hs
     source-dirs:         day14
